@@ -101,20 +101,32 @@ my $can_fork
 my $tests = @TESTS;
 my $tport = 8334;
 
-my $tsock = IO::Socket::INET->new(
-    LocalAddr => '0.0.0.0',
-    LocalPort => $tport,
-    Listen    => 1,
-    ReuseAddr => 1
+my @addresses = (
+    {server => '::',      client => '::1'},
+    {server => '0.0.0.0', client => '127.0.0.1'}
 );
+my $family;
+for my $id (0 .. $#addresses) {
+    my $tsock = IO::Socket::IP->new(
+        LocalAddr => $addresses[$id]->{server},
+        LocalPort => $tport,
+        Listen    => 1,
+        ReuseAddr => 1
+    );
+    if ($tsock) {
+        close $tsock;
+        $family = $id;
+        last;
+    }
+}
+
 if (!$can_fork) {
     plan skip_all => "This system cannot fork";
 }
-elsif (!$tsock) {
-    plan skip_all => "Cannot listen on 0.0.0.0:$tport";
+elsif (!defined $family) {
+    plan skip_all => "Cannot listen on unspecifed address and port $tport";
 }
 else {
-    close $tsock;
     plan tests => $tests;
 }
 
@@ -139,11 +151,11 @@ if ($pid = fork) {
             open my $fh, "| socket localhost $tport" or die;
             print $fh $test;
         }
-        use IO::Socket::INET;
-        my $sock
-            = IO::Socket::INET->new(PeerAddr => "127.0.0.1",
-            PeerPort => $tport,)
-            or die;
+        use IO::Socket::IP;
+        my $sock = IO::Socket::IP->new(
+            PeerAddr => $addresses[$family]->{client},
+            PeerPort => $tport,
+        ) or die;
         if (0) {
             for my $pos (0 .. length($raw) - 1) {
                 print $sock substr($raw, $pos, 1);
@@ -164,7 +176,7 @@ if ($pid = fork) {
 else {
     die "cannot fork: $!" unless defined $pid;
     my $d = HTTP::Daemon->new(
-        LocalAddr => '0.0.0.0',
+        LocalAddr => $addresses[$family]->{server},
         LocalPort => $tport,
         ReuseAddr => 1,
     ) or die;
