@@ -6,6 +6,8 @@ Revision history for HTTP-Daemon
   - Tidied Daemon.pm
   - Turned on EOL and tab tests
   - Removed obvious indirect object syntax in test suite
+  - Added IPv6 support. (GH#24) Thanks, @ppisar and @intrigeri
+  - Added IO::Socket::IP as a prerequisite rather than IO::Socket::INET
 
 6.04      2019-04-02 13:09:45Z
   - Remove circular dependency on LWP::RobotUA introduced in 6.02 (GH#29)
